Minor fix for new modernizer